Gap fixes

--- a/css/style.css
+++ b/css/style.css
@@ -3105,6 +3105,7 @@ figure.vimeo a img, figure.youtube a img {
 	}
 	.padding-top-bottom-small {
 		padding-top: 0px;
+		padding-bottom: 40px;
 	}
 	.padding-page-top{
 		padding-top: 117px
